name:              Ahblog
version:           0.1.7.1
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Blog
                     Handler.Article
                     Handler.About
                     Handler.Admin
                     Handler.Image
                     Handler.User
                     Helper.Form
                     Helper.MakeBrief
                     Helper.ImageForm
                     Helper.UserForm
                     Helper.Sidebar
                     Helper.ArticleInfo

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                DeriveDataTypeable
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                NamedFieldPuns
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2.6      && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-default                 >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-newsfeed                >= 1.2        && < 1.3
                 , yesod-markdown                >= 0.8        && < 0.9
                 , clientsession                 >= 0.8        && < 0.10
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-sqlite             >= 1.2        && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 2.0        && < 2.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.0        && < 2.1
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 2.0        && < 2.1
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.1        && < 2.2
                 , wai-logger                    >= 2.0        && < 2.2
                 , yesod-paginator               >= 0.9        && < 1.0
                 , time
                 , friendly-time
                 , filepath

executable         Ahblog
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Ahblog
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Ahblog
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-test                    >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-markdown                >= 0.8        && < 0.9
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-sqlite             >= 1.2        && < 1.3
                 , resourcet
                 , monad-logger                  >= 0.3
                 , lifted-base
                 , time
                 , text                          >= 0.11       && < 0.12
                 , transformers                  >= 0.3        && < 0.4
                 , hspec
